<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ConfigActivity"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <include
            layout="@layout/toolbar"
            android:id="@+id/toolbarConfig" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:text="@string/txt_textoConfig"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="12sp" />

        <ImageView
            android:id="@+id/imgPerfil"
            android:layout_width="200dp"
            android:layout_height="180dp"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:background="@color/colorWhite"
            android:contentDescription="@string/img_perfil"
            android:foregroundGravity="center"
            app:srcCompat="@drawable/ic_launcher_foreground" />

        <TextView
            android:id="@+id/txtDados"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:gravity="center"
            android:text="@string/txt_dados"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="22sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="20dp"
            android:text="@string/txt_nome"
            android:textColor="@color/colorBlack"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/edtNome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:backgroundTint="@color/colorPrimaryDark"
            android:ems="10"
            android:hint="@string/txt_digNome"
            android:inputType="textPersonName"
            android:textColor="@color/colorBlack"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="10dp"
            android:text="@string/txt_numero"
            android:textColor="@color/colorBlack"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/edtNumero"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:backgroundTint="@color/colorPrimaryDark"
            android:editable="false"
            android:ems="10"
            android:enabled="false"
            android:hint="@string/txt_NumeroPadrao"
            android:inputType="phone"
            android:textColor="@color/colorBlack"
            android:textSize="16sp" />

        <Button
            android:id="@+id/btnSalvar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@color/colorPrimaryDark"
            android:onClick="salvarConfig"
            android:text="@string/txt_salvar"
            android:textColor="@color/colorWhite" />

    </LinearLayout>


</ScrollView>