<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Autenticacao.ValidadorActivity">

    <LinearLayout
        android:id="@+id/linearValidacao"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimary"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imgLogo"
            android:layout_width="260dp"
            android:layout_height="220dp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:contentDescription="@string/img_logo"
            app:srcCompat="@drawable/logo" />

        <TextView
            android:id="@+id/txtValidacao"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:gravity="center"
            android:text="@string/txt_Validacao"
            android:textColor="@color/colorWhite"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txtTexto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:text="@string/txt_textoValidacao"
            android:textColor="@color/colorWhite"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/edtCodigo"
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:ems="10"
            android:hint="@string/txt_codigo"
            android:inputType="textPersonName"
            android:textColor="@color/colorWhite" />

        <Button
            android:id="@+id/btnValidar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:onClick="onClickValidar"
            android:text="@string/txt_Validar" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>