<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <ImageView
        android:id="@+id/imgContatoPerfil"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="10dp"
        android:contentDescription="@string/img_perfil"
        app:srcCompat="@drawable/ic_account_circle" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:gravity="center_vertical"
        android:orientation="vertical"
        android:textAppearance="?android:attr/textAppearanceListItemSmall">

        <TextView
            android:id="@+id/txt_nome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:gravity="center_vertical"
            android:paddingStart="8dp"
            android:paddingEnd="1dp"
            android:text="@string/txt_nome"
            android:textColor="@android:color/black"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/txt_numero"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="12dp"
            android:paddingEnd="1dp"
            android:text="@string/txt_NumeroPadrao"
            android:textColor="@android:color/black"
            android:textSize="12sp" />


    </LinearLayout>


</LinearLayout>
