<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <LinearLayout
        android:id="@+id/layoutLogin"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimary"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imgLogo"
            android:layout_width="260dp"
            android:layout_height="220dp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:contentDescription="@string/img_logo"
            app:srcCompat="@drawable/logo" />

        <EditText
            android:id="@+id/edtNome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="5dp"
            android:autofillHints="edtNome"
            android:ems="10"
            android:gravity="center_vertical"
            android:hint="@string/txt_digNome"
            android:inputType="textPersonName"
            android:textColor="@color/colorWhite" />

        <EditText
            android:id="@+id/edtNumero"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="5dp"
            android:autofillHints="edtNumero"
            android:ems="10"
            android:hint="+55 (82) 90000-0000"
            android:inputType="phone"
            android:textColor="@color/colorWhite" />

        <Button
            android:id="@+id/btnCadastrar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="5dp"
            android:onClick="onClickCadastrar"
            android:text="@string/txt_cadastrar" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>